// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDatePickerHeader.js should render component and match snapshot 1`] = `

<div class="v-date-picker-header theme--light">
  <button type="button"
          class="v-btn v-btn--fab v-btn--flat v-btn--round theme--light v-size--default v-btn--icon"
  >
    <span class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        chevron_left
      </i>
    </span>
  </button>
  <div class="v-date-picker-header__value">
    <div class="accent--text">
      <button>
        November 2005
      </button>
    </div>
  </div>
  <button type="button"
          class="v-btn v-btn--fab v-btn--flat v-btn--round theme--light v-size--default v-btn--icon"
  >
    <span class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        chevron_right
      </i>
    </span>
  </button>
</div>

`;

exports[`VDatePickerHeader.js should render component in RTL mode and match snapshot 1`] = `

<div class="v-date-picker-header theme--light">
  <button type="button"
          class="v-btn v-btn--fab v-btn--flat v-btn--round theme--light v-size--default v-btn--icon"
  >
    <span class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        chevron_right
      </i>
    </span>
  </button>
  <div class="v-date-picker-header__value">
    <div class="accent--text">
      <button>
        November 2005
      </button>
    </div>
  </div>
  <button type="button"
          class="v-btn v-btn--fab v-btn--flat v-btn--round theme--light v-size--default v-btn--icon"
  >
    <span class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        chevron_left
      </i>
    </span>
  </button>
</div>

`;

exports[`VDatePickerHeader.js should render component with default slot and match snapshot 1`] = `

<div class="v-date-picker-header theme--light">
  <button type="button"
          class="v-btn v-btn--fab v-btn--flat v-btn--round theme--light v-size--default v-btn--icon"
  >
    <span class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        chevron_left
      </i>
    </span>
  </button>
  <div class="v-date-picker-header__value">
    <div class="accent--text">
      <button>
        <span>
          foo
        </span>
      </button>
    </div>
  </div>
  <button type="button"
          class="v-btn v-btn--fab v-btn--flat v-btn--round theme--light v-size--default v-btn--icon"
  >
    <span class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        chevron_right
      </i>
    </span>
  </button>
</div>

`;

exports[`VDatePickerHeader.js should render disabled component and match snapshot 1`] = `

<div class="v-date-picker-header v-date-picker-header--disabled theme--light">
  <button disabled="disabled"
          type="button"
          class="v-btn v-btn--disabled v-btn--fab v-btn--flat v-btn--round theme--light v-size--default v-btn--icon"
  >
    <span class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        chevron_left
      </i>
    </span>
  </button>
  <div class="v-date-picker-header__value v-date-picker-header__value--disabled">
    <div>
      <button>
        November 2005
      </button>
    </div>
  </div>
  <button disabled="disabled"
          type="button"
          class="v-btn v-btn--disabled v-btn--fab v-btn--flat v-btn--round theme--light v-size--default v-btn--icon"
  >
    <span class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        chevron_right
      </i>
    </span>
  </button>
</div>

`;

exports[`VDatePickerHeader.js should render readonly component and match snapshot 1`] = `

<div class="v-date-picker-header theme--light">
  <button type="button"
          class="v-btn v-btn--fab v-btn--flat v-btn--round theme--light v-size--default v-btn--icon"
  >
    <span class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        chevron_left
      </i>
    </span>
  </button>
  <div class="v-date-picker-header__value">
    <div class="accent--text">
      <button>
        November 2005
      </button>
    </div>
  </div>
  <button type="button"
          class="v-btn v-btn--fab v-btn--flat v-btn--round theme--light v-size--default v-btn--icon"
  >
    <span class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons theme--light"
      >
        chevron_right
      </i>
    </span>
  </button>
</div>

`;
